# anist

./: README.md  main.py  pyproject.toml
anist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: cli.py  diff.py
src/anist/: cli.py  commit.py  diff.py  state.py  utils.py
