[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anist"
version = "0.1.0"
description = "Arc Ninja Stack Tool for streamlining workflows with stacked diffs in Phabricator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Gaetano Rispoli" }]
dependencies = ["typer>=0.9.0", "rich>=13.0.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
anist = "anist.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["anist"]
